# entities/login_user_dto.go
@@ -1,0 +1,7 @@
+package entities
+
+type LoginUserDto struct {
+	FullName string `json:"full_name"`
+	Email string `json:"email"`
+	Password string `json:"password"`
+}
