# server/server.gen.go
@@ -14,6 +14,9 @@ import (
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
+	// (POST /auth/login)
+	LogIn(c *gin.Context)
+
 	// (POST /auth/signup)
 	SignUp(c *gin.Context)
 	// Get all tasks
@@ -38,6 +41,19 @@ type ServerInterfaceWrapper struct {
 }
 
 type MiddlewareFunc func(c *gin.Context)
+
+// LogIn operation middleware
+func (siw *ServerInterfaceWrapper) LogIn(c *gin.Context) {
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.LogIn(c)
+}
 
 // SignUp operation middleware
 func (siw *ServerInterfaceWrapper) SignUp(c *gin.Context) {
@@ -153,6 +169,7 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 		ErrorHandler:       errorHandler,
 	}
 
+	router.POST(options.BaseURL+"/auth/login", wrapper.LogIn)
 	router.POST(options.BaseURL+"/auth/signup", wrapper.SignUp)
 	router.GET(options.BaseURL+"/tasks", wrapper.GetAllTasks)
 	router.POST(options.BaseURL+"/tasks", wrapper.CreateTask)
